fix card width on mobile (2)

--- a/modules/mod_emundus_campaign/css/mod_emundus_campaign_tchooz.css
+++ b/modules/mod_emundus_campaign/css/mod_emundus_campaign_tchooz.css
@@ -174,6 +174,12 @@
     }
 }
 
+@media all and (min-width: 768px) and (max-width: 959px) {
+    .mod_emundus_campaign__list_content_resume{
+        max-width: 258px;
+    }
+}
+
 .mod_emundus_campaign__list_content_resume * {
     color: var(--neutral-600) !important;
     display: inline;
